<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etValor1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/valor_1"
        android:hint="@string/valor_1"
        android:inputType="number"
        android:labelFor="@string/valor_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/etValor2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/valor_2"
        android:hint="@string/valor_2"
        android:inputType="number"
        android:labelFor="@string/valor_2"
        app:layout_constraintStart_toStartOf="@+id/etValor1"
        app:layout_constraintTop_toBottomOf="@+id/etValor1"
        tools:targetApi="o" />

    <RadioGroup
        android:id="@+id/rg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValor2">

        <RadioButton
            android:id="@+id/rbSomar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/somar"></RadioButton>

        <RadioButton
            android:id="@+id/rbDiminuir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diminuir"></RadioButton>

        <RadioButton
            android:id="@+id/rbMultiplicar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiplicar"></RadioButton>

        <RadioButton
            android:id="@+id/rbDividir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dividir"></RadioButton>

    </RadioGroup>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="71dp"
        android:text="@string/igual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg1" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular"
        tools:layout_editor_absoluteX="99dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabCalculadora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:fabCustomSize="64dp"
        app:maxImageSize="40dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabIMC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="center"

        app:fabCustomSize="64dp"
        app:maxImageSize="40dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fabCalculadora"
        app:srcCompat="@drawable/ic_imc2" />

</androidx.constraintlayout.widget.ConstraintLayout>